<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miranhafundo2"
    tools:context=".brinquedo2">

    <Button
        android:id="@+id/btnnext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="125dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnnext"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <TextView
        android:id="@+id/txtvb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:width="200dp"
        android:height="60dp"
        android:gravity="center"
        android:text="@string/txtvb1"
        android:textColor="#B71C1C"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/brinquedo2"
        android:layout_width="158dp"
        android:layout_height="145dp"
        android:background="#830000"
        android:contentDescription="@string/brinquedo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296"
        app:srcCompat="@drawable/brinquedo2img"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtve2"
        android:layout_width="196dp"
        android:layout_height="61dp"
        android:background="#D86565"
        android:gravity="center"
        android:text="@string/txtve1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/txtmat2"
        android:layout_width="83dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/txtmat"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtmat3"
        android:layout_width="204dp"
        android:layout_height="196dp"
        android:gravity="left"
        android:text="@string/txtmat3"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/txttuto4"
        android:layout_width="295dp"
        android:layout_height="258dp"
        android:gravity="right"
        android:text="@string/txttuto4"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/txttuto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txttuto3"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />
</androidx.constraintlayout.widget.ConstraintLayout>