<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundoinicio"
    tools:context=".login">

    <EditText
        android:id="@+id/edtxtsenha"
        android:layout_width="224dp"
        android:layout_height="80dp"
        android:ems="10"
        android:fontFamily="@font/eczar_medium"
        android:hint="@string/senhalog"
        android:inputType="textPassword"
        android:textColorHint="#7A0606"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <EditText
        android:id="@+id/edtxtnomelog"
        android:layout_width="209dp"
        android:layout_height="84dp"
        android:ems="10"
        android:fontFamily="@font/eczar_medium"
        android:hint="@string/nomelog"
        android:inputType="text"
        android:textColorHint="#7A0606"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D86565"
        android:fontFamily="@font/eczar_medium"
        android:text="@string/txtlogin"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btnenviar"
        android:layout_width="142dp"
        android:layout_height="67dp"
        android:backgroundTint="#B5FF0D0D"
        android:fontFamily="@font/eczar_medium"
        android:text="@string/btncadastro"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>