<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miranha"
    tools:context=".tutorial">

    <Button
        android:id="@+id/btntuto"
        android:layout_width="153dp"
        android:layout_height="76dp"
        android:backgroundTint="#9FFF0D0D"
        android:fontFamily="@font/eczar_medium"
        android:text="@string/btntuto"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="153dp"
        android:layout_height="76dp"
        android:backgroundTint="#9FFF0D0D"
        android:fontFamily="@font/eczar_medium"
        android:text="@string/btnlogin"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <Button
        android:id="@+id/btnvideos"
        android:layout_width="153dp"
        android:layout_height="76dp"
        android:backgroundTint="#9FFF0D0D"
        android:fontFamily="@font/eczar_medium"
        android:text="@string/btnvd"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <TextView
        android:id="@+id/txtmenu"
        android:layout_width="172dp"
        android:layout_height="98dp"
        android:background="#9FFF0D0D"
        android:fontFamily="@font/eczar_medium"
        android:gravity="center"
        android:text="@string/txtemenu"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btncompartilhe"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="582dp"
        android:background="@drawable/compartilhamento_removebg_preview"
        android:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>